calico-policies/private-network-isolation/calico-v3/ca-tor/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring with Sysdig, and IBM Log Analysis with LogDNA.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 166.9.20.31/32
      - 166.9.22.22/32
      - 166.9.24.16/32
      # IBM Cloud Container Registry: US South, US East, Toronto nets for your own registry
      - 166.9.76.12/32
      - 166.9.77.11/32
      - 166.9.78.11/32
      - 166.9.12.227/32
      - 166.9.15.116/32
      - 166.9.16.244/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring with Sysdig: US East nets
      - 166.9.20.53/32
      - 166.9.22.50/32
      - 166.9.24.43/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Log Analysis with LogDNA: US East nets
      - 166.9.20.72/32
      - 166.9.20.73/32
      - 166.9.22.35/32
      - 166.9.22.36/32
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Log Analysis with LogDNA: US East nets
      - 166.9.20.76/32
      - 166.9.22.38/32
      ports:
      - 514
      - 6514
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Log Analysis with LogDNA: US East nets
      - 166.9.20.77/32
      - 166.9.22.39/32
      ports:
      - 514
    protocol: UDP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
